fixe margin and gap

--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,6 @@ section {
 .footer-container {
     display: flex;
     align-items: baseline;
-    gap: 120px;
 }
 
 .footer-info {
@@ -545,9 +544,6 @@ section {
     fill: #f4f4fd;
 }
 
-
-
-
 .team-info {
     padding: 32px 0;
     text-align: center;
@@ -555,22 +551,6 @@ section {
 
 .team-name {
     margin-bottom: 8px;
-}
-
-.team-role {
-    margin-bottom: 12px;
-}
-
-.social-list {
-    gap: 24px;
-}
-
-section>*:first-child {
-    margin-top: 0;
-}
-
-section>*:last-child {
-    margin-bottom: 0;
 }
 
 .footer-info:not(:last-child) {
